<resources>
    <string name="app_name">MyAlarmApp</string>
    <string name="txt_hello">Hello,</string>
    <string name="txt_welcome">Welcome in Smart Alarm</string>
    <string name="txt_time_today">13.05</string>
    <string name="txt_date_today">Sun, 26 December 2021</string>
    <string name="txt_set_reminder">Set Your Reminder</string>
    <string name="txt_set">Set</string>
    <string name="txt_one_time_alarm">One Time Alarm</string>
    <string name="txt_repeating_alarm">Repeating Alarm</string>
    <string name="txt_your_alarm">Your Alarm</string>
    <string name="txt_set_date">Set Date</string>
    <string name="txt_set_time">Set Time</string>
    <string name="txt_note">Note</string>
    <string name="txt_add_set_alarm">Add Set Alarm</string>
    <string name="txt_cancel_set_alarm">Cancel Set Alarm</string>
    <string name="txt_input_note">Input Your Note</string>
    <string name="image_one_time_alarm">Image One Time Alarm</string>
    <string name="one_time_alarm">One Time Alarm</string>
    <string name="set_date">Set Date</string>
    <string name="set">set</string>
    <string name="date">Date</string>
    <string name="note">Note</string>
    <string name="time">Time</string>
    <string name="input_your_note">Input Your Note</string>
    <string name="cancel">Cancel</string>
    <string name="add_set_alarm">Add Set Alarm</string>
    <string name="repeating_alarm">Repeating Alarm</string>
    <string name="set_time">Set Time</string>
    <string name="text_toast_add_alarm">Please set date and time</string>
    <string name="txt_toast_add_alarm">Please set time and date</string>
</resources>